--- a/index.html
+++ b/index.html
@@ -12,25 +12,30 @@
   <div class="wrapper clearfix">
 
     <div class="scheme-panel active">
-      Display Scheme
+        <div class="scheme">Display Scheme</div>
       <div class="btn-panel">
-        <button>Next Turn</button>
+        <button><i class="ion-log-in"></i>Next Turn</button>
       </div>
     </div>
     <div class="archenemy-panel active">
       Archenemy Info
       <div class="btn-panel">
-        <button>New Game</button>
+        <button><i class="ion-refresh"></i> New Game</button>
       </div>
     </div>
     <div class="players-panel active">
       Players Info
       <div class="btn-panel">
-        <button>New Player</button>
+        <button><i class="ion-ios-plus-outline"></i> New Player</button>
       </div>
     </div>
     <div class="ongoing-panel">
-      Ongoins schemes
+        <div class="ongoing">
+            <div class="scheme-mini">
+                Ongoins schemes
+                <button><i class="ion-log-out"></i> Abandon</button>
+            </div>
+        </div>
     </div>
   </div>
 </body>
