--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 
 <body>
   <div class="wrapper clearfix">
-
-    <div class="scheme-panel active">
+    <div class="scheme-panel">
         <div class="scheme">Display Scheme</div>
-      <div class="btn-panel">
-        <button><i class="ion-log-in"></i>Next Turn</button>
-      </div>
+        <div class="btn-panel">
+            <button><i class="ion-log-in"></i>Next Turn</button>
+        </div>
     </div>
-    <div class="archenemy-panel active">
+    <div class="archenemy-panel">
       Archenemy Info
       <div class="btn-panel">
         <button><i class="ion-refresh"></i> New Game</button>
       </div>
     </div>
-    <div class="players-panel active">
+    <div class="players-panel">
       Players Info
       <div class="btn-panel">
         <button><i class="ion-ios-plus-outline"></i> New Player</button>
@@ -33,6 +32,8 @@
         <div class="ongoing">
             <div class="scheme-mini">
                 Ongoins schemes
+            </div>
+            <div class="btn-panel">
                 <button><i class="ion-log-out"></i> Abandon</button>
             </div>
         </div>
