--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div class="wrapper clearfix">
     <div class="scheme-panel">
-        <div class="scheme">Display Scheme</div>
+        <div class="scheme" id="target"></div>
         <div class="btn-panel">
-            <button><i class="ion-log-in"></i>Next Turn</button>
+            <button class="btn-scheme"><i class="ion-log-in"></i>Next Turn</button>
         </div>
     </div>
     <div class="archenemy-panel">
@@ -39,5 +39,6 @@
         </div>
     </div>
   </div>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
