--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
   <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link type="text/css" rel="stylesheet" href="site.css">
   <title>Archenemy</title>
 </head>
@@ -13,7 +14,7 @@
     <div class="scheme-panel">
         <div class="scheme" id="target"></div>
         <div class="btn-panel">
-            <button class="btn-scheme"><i class="ion-log-in"></i>Next Turn</button>
+            <button class="btn-scheme"><i class="ion-log-in"></i>Next Scheme</button>
         </div>
     </div>
     <div class="archenemy-panel">
@@ -39,6 +40,7 @@
         </div>
     </div>
   </div>
+  <script type="text/javascript" src="schemeList.json"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
