--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="archenemy-panel">
       Archenemy Info
       <div class="btn-panel">
-        <button><i class="ion-refresh"></i> New Game</button>
+        <button class="btn-game"><i class="ion-refresh"></i> New Game</button>
       </div>
     </div>
     <div class="players-panel">
       Players Info
       <div class="btn-panel">
-        <button><i class="ion-ios-plus-outline"></i> New Player</button>
+        <button class="btn-player"><i class="ion-ios-plus-outline"></i> New Player</button>
       </div>
     </div>
     <div class="ongoing-panel">
@@ -35,7 +35,7 @@
                 Ongoins schemes
             </div>
             <div class="btn-panel">
-                <button><i class="ion-log-out"></i> Abandon</button>
+                <button class="btn-abandon"><i class="ion-log-out"></i> Abandon</button>
             </div>
         </div>
     </div>
