--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </div>
     </div>
     <div class="archenemy-panel">
-      Archenemy Info
+      <h2>ARCHENEMY</h2>
       <div class="btn-panel">
         <button class="btn-game"><i class="ion-refresh"></i> New Game</button>
       </div>
     </div>
     <div class="players-panel">
-      Players Info
+      <h2>OPPONENTS</h2>
       <div class="btn-panel">
         <button class="btn-player"><i class="ion-ios-plus-outline"></i> New Player</button>
       </div>
@@ -32,7 +32,7 @@
     <div class="ongoing-panel">
         <div class="ongoing">
             <div class="scheme-mini">
-                Ongoins schemes
+                <h2>ONGOING SCHEMES</h2>
             </div>
             <div class="btn-panel">
                 <button class="btn-abandon"><i class="ion-log-out"></i> Abandon</button>
@@ -40,7 +40,6 @@
         </div>
     </div>
   </div>
-  <script type="text/javascript" src="schemeList.json"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
